원더플레이스 셋팅

--- a/스터디_2023/프로젝트/원더플레이스/css/style.css
+++ b/스터디_2023/프로젝트/원더플레이스/css/style.css
@@ -193,8 +193,6 @@ a:focus { text-decoration: underline; }
 
 a:active { color: #555; text-decoration: none; }
 
-input, textarea, button { appearance: none; -moz-appearance: none; -webkit-appearance: none; border-radius: 0; -webkit-border-radius: 0; -moz-border-radius: 0; }
-
 #wrapper { position: relative; max-width: 1920px; min-width: 1232px; overflow: hidden; margin: 0 auto; }
 
 .wrap { position: relative; width: 1232px; margin: 0 auto; }
@@ -378,7 +376,7 @@ body { font-family: 'Noto Sans KR', sans-serif; font-size: 16px; }
   .event .event_tab .tab_content { width: 100%; margin-top: 20px; }
   .event .more { top: 0; right: 0; } }
 
-.only_emart { overflow: hidden; margin-top: 155px; opacity: 0; -webkit-transform: translateY(200px); transform: translateY(200px); -webkit-transition: all 0.7s ease; transition: all 0.7s ease; }
+.only_emart { margin-top: 155px; opacity: 0; -webkit-transform: translateY(200px); transform: translateY(200px); -webkit-transition: all 0.7s ease; transition: all 0.7s ease; }
 
 .only_emart[data-on=on] { opacity: 1; -webkit-transform: translateY(0); transform: translateY(0); }
 
@@ -433,7 +431,7 @@ body { font-family: 'Noto Sans KR', sans-serif; font-size: 16px; }
 
 @media (max-width: 800px) { .only_emart { margin-top: 90px; }
   .only_emart .title_box span { display: none; }
-  .only_emart .only_slide .slick-list { padding: 20px 20% 80px !important; }
+  .only_emart .only_slide .slick-list { padding: 20px 20% 80px; }
   .only_emart .only_slide .slide_item { opacity: 1; }
   .only_emart .only_slide .slide_item.slick-active { opacity: 1; }
   .only_emart .only_slide .slide_item a .img_box { height: 50vw; } }
@@ -730,7 +728,7 @@ body { font-family: 'Noto Sans KR', sans-serif; font-size: 16px; }
   .app .text_box .down_box p { display: none; }
   .app .text_box .more { display: none; } }
 
-.story { overflow: hidden; margin-top: 125px; opacity: 0; -webkit-transform: translateY(200px); transform: translateY(200px); -webkit-transition: all 0.7s ease; transition: all 0.7s ease; }
+.story { margin-top: 125px; opacity: 0; -webkit-transform: translateY(200px); transform: translateY(200px); -webkit-transition: all 0.7s ease; transition: all 0.7s ease; }
 
 .story[data-on=on] { opacity: 1; -webkit-transform: translateY(0); transform: translateY(0); }
 
