--- a/스터디_2023/프로젝트/원더플레이스/css/style.css
+++ b/스터디_2023/프로젝트/원더플레이스/css/style.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;700&display=swap");
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard.css");
 /*반응형 화면 크기*/
 /*반응형, 브라우저 크기가 1001px 이상일때*/
 /*반응형, 브라우저 크기가 1400px 이하일때*/
@@ -7,11 +8,9 @@
 /*반응형, 브라우저 크기가 1000px 이하일때*/
 /*반응형, 브라우저 크기가 800px 이하일때*/
 /*반응형, 브라우저 크기가 640px 이하일때*/
-header { position: relative; }
+header { position: relative; width: 100%; height: 120px; background-color: #db9292; z-index: 20; -webkit-transition: all ease 0.2s; transition: all ease 0.2s; }
 
-.fixed header { position: fixed; left: 0; -webkit-transform: translateY(-25px); transform: translateY(-25px); }
-
-.fixed header::before { -webkit-backdrop-filter: blur(5px); backdrop-filter: blur(5px); background-color: rgba(255, 255, 255, 0.5); }
+.fixed header { position: fixed; left: 0; -webkit-transform: translateY(-20px); transform: translateY(-20px); }
 
 h1 { font-size: 0; line-height: 0; }
 
@@ -21,9 +20,17 @@ h1 { font-size: 0; line-height: 0; }
 
 .accessibility a:focus { height: auto; padding-top: 5px; padding-bottom: 5px; background-color: #000; color: #fff; }
 
-.logo { position: absolute; }
+.logo { position: absolute; top: 60px; }
 
-.gnb { position: relative; }
+.gnb { position: relative; height: 100%; }
+
+.gnb ul { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: end; -ms-flex-pack: end; justify-content: flex-end; -webkit-box-align: center; -ms-flex-align: center; align-items: center; height: 100%; }
+
+.gnb ul li { margin: 0 25px; }
+
+.gnb ul li a { font-size: 18px; line-height: 40px; font-weight: 600; color: #131313; }
+
+.lnb { display: none; }
 
 footer { position: relative; }
 
@@ -38,15 +45,49 @@ a:focus { text-decoration: underline; }
 
 a:active { color: #555; text-decoration: none; }
 
-#wrapper { position: relative; max-width: 1920px; min-width: 1232px; overflow: hidden; margin: 0 auto; }
+#wrapper { position: relative; max-width: 1920px; min-width: 1590px; overflow: hidden; margin: 0 auto; }
 
-.wrap { position: relative; width: 1232px; margin: 0 auto; }
+.wrap { position: relative; width: 1590px; margin: 0 auto; }
 
-body { font-family: 'Noto Sans KR', sans-serif; font-size: 16px; }
+body { font-family: 'Poppins', 'Pretendard', sans-serif; font-size: 16px; }
 
 @media (max-width: 1280px) { #wrapper { min-width: 1000px; }
   .wrap { width: 1000px; } }
 
 @media (max-width: 1000px) { #wrapper { min-width: 94%; }
   .wrap { width: 94%; } }
+
+section h2 { margin-bottom: 20px; font-size: 16px; line-height: 30px; letter-spacing: 4px; }
+
+section h3 { margin-bottom: 60px; font-size: 70px; line-height: 80px; }
+
+.visual .title_box { position: absolute; z-index: 5; }
+
+.visual .title_box .title { margin-bottom: 60px; font-size: 80px; line-height: 100px; font-weight: 200; }
+
+.visual .title_box .title span { display: block; font-weight: 200; }
+
+.visual .title_box .title b { font-weight: 800; }
+
+.visual .title_box .text { font-size: 18px; line-height: 30px; }
+
+.visual .title_box .text span { margin-bottom: 20px; font-weight: 700; }
+
+.visual .slide_list { padding-top: 370px; }
+
+.visual .slide_list .slide_item { width: 100%; height: 600px; }
+
+.visual .slide_list .slide_item a { display: block; height: 100%; }
+
+.visual .slide_list .slide_item a .img_box { width: 100%; height: 100%; background-repeat: no-repeat; background-position: center center; background-size: cover; font-size: 0; line-height: 0; }
+
+.visual .slide_control { font-size: 0; line-height: 0; }
+
+.visual .slide_control button { position: relative; width: 80px; height: 80px; background-color: #131313; }
+
+.visual .slide_control button::before { display: block; position: absolute; top: calc(50% - 12px); left: calc(50% - 20px); width: 24px; height: 24px; border-top: 2px solid #fff; border-right: 2px solid #fff; border-radius: 2px; -webkit-transform: rotate(45deg); transform: rotate(45deg); -webkit-transition: all ease 0.2s; transition: all ease 0.2s; }
+
+.visual .slide_control button:hover::before { opacity: 0.5; }
+
+.visual .slide_control .prev::before { -webkit-transform: rotate(-135deg); transform: rotate(-135deg); left: calc(50% - 5px); }
 /*# sourceMappingURL=style.css.map */
