--- a/스터디_2023/프로젝트/원더플레이스/css/style.scss
+++ b/스터디_2023/프로젝트/원더플레이스/css/style.scss
@@ -1,5 +1,6 @@
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;700&display=swap');
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard.css");
 @import './_variables.scss', './_mixin.scss';
 @import './_header.scss', '_footer.scss';
 
@@ -31,20 +32,20 @@ a:active {
 #wrapper {
     position: relative;
     max-width: 1920px;
-    min-width: 1232px;
+    min-width: 1590px;
     overflow: hidden;
     margin: 0 auto;
 }
 
 .wrap {
     position: relative;
-    width: 1232px;
+    width: 1590px;
     margin: 0 auto;
 }
 
 
 body {
-    font-family: 'Noto Sans KR', sans-serif;
+    font-family: 'Poppins', 'Pretendard', sans-serif;
     font-size: 16px;
 }
 
@@ -71,4 +72,96 @@ body {
     }
 }
 
+
+section{
+    h2{
+        margin-bottom:20px;
+        font-size:16px;
+        line-height:30px;
+        letter-spacing:4px;
+    }
+    h3{
+        margin-bottom:60px;
+        font-size:70px;
+        line-height:80px;
+    }
+    
+}
+
+.visual{
+    .title_box{
+        position: absolute;
+        z-index: 5;
+        .title{
+            margin-bottom:60px;
+            font-size:80px;
+            line-height:100px;
+            font-weight: 200;
+            span{
+                display: block;
+                font-weight: 200;
+            }
+            b{
+                font-weight: 800;
+            }
+        }
+        .text{
+            font-size:18px;
+            line-height:30px;
+            span{
+                margin-bottom:20px;
+                font-weight:700;
+            }
+        }
+    }
+
+    .slide_list{
+        padding-top:370px;
+        .slide_item{
+            width:100%;
+            height:600px;
+            a{
+                display: block;
+                height:100%;
+                .img_box{
+                    width:100%;
+                    height: 100%;
+                    @include style_bg;
+                }
+            }
+        }
+    }
+    .slide_control{
+        font-size:0;
+        line-height:0;
+        button{
+            position: relative;
+            width:80px;
+            height:80px;
+            background-color:$BrandColorBlack;
+            &::before{
+                display: block;
+                position: absolute;
+                top:calc(50% - 12px);
+                left: calc(50% - 20px);
+                width:24px;
+                height:24px;
+                border-top:2px solid #fff;
+                border-right:2px solid #fff;
+                border-radius:2px;
+                transform: rotate(45deg);
+                transition: all ease 0.2s;
+            }
+            &:hover::before{
+                opacity: 0.5;
+            }
+        }
+        .prev{
+            &::before{
+                transform: rotate(-135deg);
+                left: calc(50% - 5px);
+            }
+        }
+    }
+}
 
