--- a/스터디_2023/프로젝트/원더플레이스/css/common.css
+++ b/스터디_2023/프로젝트/원더플레이스/css/common.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 
-body{position:relative; line-height:25px; color:#131313; font-size:16px; font-family:'Poppins','Pretendard','Malgun Gothic','맑은 고딕',Dotum,'돋움',Helvetica,AppleSDGothicNeo,sans-serif; letter-spacing:-0.03em;}
+body{position:relative; line-height:25px; color:#131313; font-size:16px; font-family:'Poppins','Pretendard','Malgun Gothic','맑은 고딕',Dotum,'돋움',Helvetica,AppleSDGothicNeo,sans-serif; letter-spacing:-1px;}
 a:link{color:#131313;text-decoration:none;}
 a:visited{color:#131313;text-decoration:none;}
 a:hover{color:#131313;text-decoration:underline;}
@@ -68,9 +68,10 @@ input[type="submit"]{cursor:pointer;}
 
 .skip{overflow:hidden;}
 
-.header_top .menu_show{display:none; visibility:visible; position:absolute; top:18px; right:0; z-index:5; width:28px;}
-.header_top .menu_show .menu_button{display:block; position:relative; width:100%; height:28px; border:none; color:transparent; font-size:0;}
-.header_top .menu_show .menu_button:before{display:block; position:absolute; top:7px; right:5px; width:18px; height:16px; background-repeat:no-repeat; background-position:-186px -90px;; background-image:url('../images/main_sprite.png'); content:'';}
+.header_top .menu_show{display:block; visibility:visible; position:absolute; top:18px; right:0; z-index:5; width:40px;}
+.header_top .menu_show .menu_button{display:block; position:relative; width:100%; height:40px; border:none; color:transparent; font-size:0;}
+.header_top .menu_show .menu_button:before{display:block; position:absolute; top:10px; right:calc(50% - 10px); width:20px; height:3px; background-color:#131313;}
+.header_top .menu_show .menu_button:after{display:block; position:absolute; bottom:11px; right:calc(50% - 10px); width:20px; height:3px; background-color:#131313;}
 
 .lnb_curtain{display:none;}
 @media all and (max-width:1000px){
